A navbar foi finalizada. Início do corpo do site

--- a/index.html
+++ b/index.html
@@ -42,12 +42,17 @@
           <li>O Nubank</li>
           <li>Perguntas</li>
           <li class="loginButton">
-            Login<i class="fa-solid fa-arrow-right-from-bracket"></i>
+            Login<i class="fa-solid fa-right-to-bracket loginIcon"></i>
           </li>
         </ul>
       </nav>
       <div id="mainContent"></div>
-      <section id="sectionLogin"></section>
+        <section id="sectionLogin">
+          <h1 class="mainTitle">O futuro é a razão que a gente faz planos.</h1>
+          <p class="firstText">
+            Escolha o futuro. Comece a controlar melhor sua vida financeira com o Nubank.
+          </p>
+        </section>
     </div>
   </body>
 </html>
