Alterações na navbar e construção da primeira section

--- a/index.html
+++ b/index.html
@@ -46,13 +46,51 @@
           </li>
         </ul>
       </nav>
-      <div id="mainContent"></div>
+      <main id="mainContent">
         <section id="sectionLogin">
-          <h1 class="mainTitle">O futuro é a razão que a gente faz planos.</h1>
-          <p class="firstText">
-            Escolha o futuro. Comece a controlar melhor sua vida financeira com o Nubank.
-          </p>
+          <div class="registerWrapper">
+            <div class="textsLogin">
+              <h1 class="mainTitle">
+                O futuro é a razão que a gente faz planos.
+              </h1>
+              <p class="firstText">
+                Escolha o futuro. Comece a controlar melhor sua vida financeira
+                com o Nubank.
+              </p>
+            </div>
+            <div class="registerCard">
+              <h2 class="registerCardTitle">
+                Peça sua conta e cartão de crédito do Nubank
+              </h2>
+              <form class="registerForm">
+                <input class="inputForm" placeholder=" "/>
+                <span class="registerPlaceholder">Digite seu CPF</span>
+                <button class="registerButton">
+                  <span>Continuar</span
+                  ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="none"
+                    viewBox="0 0 21 20"
+                    class="sc-pzMyG gRERfq"
+                    color="currentColor"
+                    role="img"
+                  >
+                    <path
+                      d="M18.5 10H2.5M18.5 10L12 16.5M18.5 10L12 3.5"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="square"
+                      stroke-linejoin="round"
+                    ></path>
+                  </svg>
+                </button>
+              </form>
+            </div>
+          </div>
         </section>
+      </main>
     </div>
   </body>
 </html>
