Ajustes nas seções versão mobile

--- a/index.html
+++ b/index.html
@@ -90,6 +90,46 @@
             </div>
           </div>
         </section>
+        <div class="mainSections">
+          <section class="creditSection">
+            <div class="textsbuttonSections">
+              <h1 class="titleSections">Conheça nosso Cartão de Crédito</h1>
+              <p class="textSections">
+                Pode chamar ele de roxinho. Além disso, pode chamar ele de
+                moderno, gratuito e prático também.
+              </p>
+              <button class="buttonSections">
+                Saiba mais<i class="fa-solid fa-arrow-right iconSaibaMais"></i>
+              </button>
+            </div>
+            <img src="/src/img/creditCard.jpg" class="imgSections" />
+          </section>
+          <section class="premiumCredit">
+            <div class="textsbuttonSections">
+              <h1 class="titleSections">Nubank Ultravioleta</h1>
+              <p class="textSections">
+                O cartão de crédito premium para você viver todas as suas
+                escolhas.
+              </p>
+              <button class="buttonSections">
+                Saiba mais<i class="fa-solid fa-arrow-right iconSaibaMais"></i>
+              </button>
+            </div>
+            <img src="/src/img/premiumCredit.webp" class="imgSections" />
+          </section>
+          <section class="registerAccount">
+            <div class="textsbuttonSections">
+              <h1 class="titleSections">Conta do Nubank</h1>
+              <p class="textSections">
+                A conta que vai levar você ao controle da sua vida financeira.
+              </p>
+              <button class="buttonSections">
+                Sem tarifas e sem complicações<i class="fa-solid fa-arrow-right iconSaibaMais"></i>
+              </button>
+            </div>
+            <img src="/src/img/contaNU.webp" class="imgSections">
+          </section>
+        </div>
       </main>
     </div>
   </body>
